--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -26,7 +28,6 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 100vw;
   min-height: 100vh;
 }
 
